fix for hamburger alignment in mobile

--- a/root/style.css
+++ b/root/style.css
@@ -536,6 +536,7 @@ footer .footer-2 {display:none;}
         background: none;
         border: none;
         color: inherit;
+        padding:0px;
     }
 
     /* Make the nav row span full width so the dropdown/menu can appear below it */
